--- a/heim_schwab_bootstrap/index.html
+++ b/heim_schwab_bootstrap/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="Kazi" content="">
+    <meta name="Kazi" content="Theme">
     <title>Heim Schwab</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
