--- a/heim_schwab_bootstrap/index.html
+++ b/heim_schwab_bootstrap/index.html
@@ -171,7 +171,7 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12">
 					<div id="event-carousel" class="carousel slide" data-interval="false">
-						<h2 class="heading">Unsere Team</h2>
+						<h2 class="heading">Unser Team</h2>
 						<a class="even-control-left" href="#event-carousel" data-slide="prev"><i class="fa fa-angle-left"></i></a>
 						<a class="even-control-right" href="#event-carousel" data-slide="next"><i class="fa fa-angle-right"></i></a>
 						<div class="carousel-inner">
